...
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fondo_boton_redondo"
        android:contentDescription="@string/boton_lupa"
        android:onClick="search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_mod_perfil"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="ImageContrastCheck" />
...
